@@ -1,5 +1,6 @@
 package com.demosec.demosec.user;
 
+
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -8,6 +9,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import static com.demosec.demosec.user.Permission.*;
 
@@ -32,11 +34,14 @@ public enum Role {
     );
 
     @Getter
-    private final Set<Permission> permissions ;
+    private final Set<Permission> permissions;
 
     public List<SimpleGrantedAuthority> getAuthorities() {
-        var authorities = getPermissions().stream().map(permission -> new SimpleGrantedAuthority(permission.name())).toList();
-        authorities.add(new SimpleGrantedAuthority("ROLE_" +this.name()));
-                return authorities;
+        var authorities = getPermissions()
+                .stream()
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermissionName()))
+                .collect(Collectors.toList());
+        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
+        return authorities;
     }
 }
